底层框架的搭建

--- a/IWll.IBLL/IWll.IBLL.csproj
+++ b/IWll.IBLL/IWll.IBLL.csproj
@@ -39,8 +39,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="InterfaceBaseService.cs" />
+    <Compile Include="InterfaceUserService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\IWll.Models\IWll.Models.csproj">
+      <Project>{ced8a83b-070c-47c3-8fed-9efa719aa3cd}</Project>
+      <Name>IWll.Models</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
