--- a/IWll.BLL/IWll.BLL.csproj
+++ b/IWll.BLL/IWll.BLL.csproj
@@ -39,8 +39,27 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="BaseService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UserService.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\IWll.DAL\IWll.DAL.csproj">
+      <Project>{19d72ea9-90f4-4863-91e6-61b544508fa5}</Project>
+      <Name>IWll.DAL</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\IWll.IBLL\IWll.IBLL.csproj">
+      <Project>{c494d632-70df-43d3-a67c-4406f3f86586}</Project>
+      <Name>IWll.IBLL</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\IWll.IDAL\IWll.IDAL.csproj">
+      <Project>{ae8668f6-f103-46e0-80b1-00b7e8261bd8}</Project>
+      <Name>IWll.IDAL</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\IWll.Models\IWll.Models.csproj">
+      <Project>{ced8a83b-070c-47c3-8fed-9efa719aa3cd}</Project>
+      <Name>IWll.Models</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
