--- a/IWll.IBLL/IWll.IBLL.csproj
+++ b/IWll.IBLL/IWll.IBLL.csproj
@@ -40,6 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="InterfaceBaseService.cs" />
+    <Compile Include="InterfaceManagerService.cs" />
     <Compile Include="InterfaceUserService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
