--- a/IWll.IDAL/IWll.IDAL.csproj
+++ b/IWll.IDAL/IWll.IDAL.csproj
@@ -40,6 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="InterfaceBaseRepository.cs" />
+    <Compile Include="InterfaceManagerRepository.cs" />
     <Compile Include="InterfaceUserRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
