--- a/IWll.Web/IWll.Web.csproj
+++ b/IWll.Web/IWll.Web.csproj
@@ -169,6 +169,7 @@
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\ManagerController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -183,7 +184,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="App_Data\IWDA.mdf" />
-    <Content Include="App_Data\IWDA_log.ldf" />
+    <Content Include="App_Data\IWDA_log.ldf">
+      <DependentUpon>IWDA.mdf</DependentUpon>
+    </Content>
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="Web.config" />
@@ -198,7 +201,20 @@
     <Content Include="Views\Web.config" />
     <Content Include="Views\Home\Index.cshtml" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\IWll.BLL\IWll.BLL.csproj">
+      <Project>{49ae0d08-e1f9-4059-88d9-2fc635ba7739}</Project>
+      <Name>IWll.BLL</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\IWll.IBLL\IWll.IBLL.csproj">
+      <Project>{c494d632-70df-43d3-a67c-4406f3f86586}</Project>
+      <Name>IWll.IBLL</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\IWll.Models\IWll.Models.csproj">
+      <Project>{ced8a83b-070c-47c3-8fed-9efa719aa3cd}</Project>
+      <Name>IWll.Models</Name>
+    </ProjectReference>
+  </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
     <None Include="Project_Readme.html" />
