--- a/IWll.Models/IWll.Models.csproj
+++ b/IWll.Models/IWll.Models.csproj
@@ -39,6 +39,8 @@
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -46,17 +48,59 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Manager.cs" />
+    <Compile Include="Children.cs">
+      <DependentUpon>IWDAModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="IWDAModel.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>IWDAModel.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="IWDAModel.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>IWDAModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="IWDAModel.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>IWDAModel.edmx</DependentUpon>
+    </Compile>
+    <Compile Include="Manager.cs">
+      <DependentUpon>IWDAModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Oldandchildren.cs">
+      <DependentUpon>IWDAModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Role.cs" />
+    <Compile Include="Theold.cs">
+      <DependentUpon>IWDAModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="User.cs" />
-    <Compile Include="UserConfig.cs" />
-    <Compile Include="UserGroup.cs" />
-    <Compile Include="UserRoleRelation.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <EntityDeploy Include="IWDAModel.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>IWDAModel.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <None Include="IWDAModel.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>IWDAModel.edmx</DependentUpon>
+      <LastGenOutput>IWDAModel.Context.cs</LastGenOutput>
+    </None>
+    <None Include="IWDAModel.edmx.diagram">
+      <DependentUpon>IWDAModel.edmx</DependentUpon>
+    </None>
+    <None Include="IWDAModel.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>IWDAModel.edmx</DependentUpon>
+      <LastGenOutput>IWDAModel.cs</LastGenOutput>
+    </None>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
