数据库配置文件

--- a/IWll.Models/App.config
+++ b/IWll.Models/App.config
@@ -11,6 +11,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="IWDAEntities" connectionString="metadata=res://*/IWDAModel.csdl|res://*/IWDAModel.ssdl|res://*/IWDAModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\v11.0;attachdbfilename=D:\workspace\IWll\IWll.Web\App_Data\IWDA.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="IWDAEntities" connectionString="metadata=res://*/IWDAModel.csdl|res://*/IWDAModel.ssdl|res://*/IWDAModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\v11.0;attachdbfilename=|DataDirectory|\IWll.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
