--- a/IWll.Web/Web.config
+++ b/IWll.Web/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="IWDAEntities" connectionString="metadata=res://*/IWDAModel.csdl|res://*/IWDAModel.ssdl|res://*/IWDAModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\v11.0;attachdbfilename=D:\workspace\IWll\IWll.Web\App_Data\IWDA.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="IWDAEntities" connectionString="metadata=res://*/IWDAModel.csdl|res://*/IWDAModel.ssdl|res://*/IWDAModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\v11.0;attachdbfilename=|DataDirectory|\IWll.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings></appSettings>
   <system.web>
